--- a/index.html
+++ b/index.html
@@ -81,13 +81,17 @@
 		
 		function updateCurrentTime() {
 			var song = document.querySelector('audio');
-			console.log(song.currentTime);
-			console.log(song.duration);
+			//console.log(song.currentTime);
+			//console.log(song.duration);
 			}
 /*This means, 1. Wait for the website to load
 2. Once it has loaded, run everything that is in the function
 time will be  updated after every 1 second*/
 			window.onload = function() {
+/* as soon as our website is loaded, 
+updateCurrentTime runs and 
+then after every 1 second, 
+setInterval makes it run again*/
 			updateCurrentTime();
 			setInterval(function() {
 			updateCurrentTime();
